@@ -2,6 +2,7 @@ Revision history for perl distribution App-tt
 
 0.10 Not Released
  - Fix "tt log -1" when running in January
+ - Fix "tt log" when specifying interval
 
 0.09 2018-09-28T11:17:05+0900
  - Add "export" action
